--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.34.1",
     "sass-loader": "^12.0.0",
+    "source-map-loader": "^3.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
